--- a/createaccount/corporate.html
+++ b/createaccount/corporate.html
@@ -20,7 +20,7 @@
       <a href="../index.html">
         <img class="mainlogo" src="../images/logo.png" alt="smatrade logo" />
       </a>
-      <h1>create a Corporate account</h1>
+      <h1>Create a Corporate account</h1>
     </header>
 
     <div class="container form-wrapper">
@@ -58,7 +58,7 @@
                   class="form-control"
                   id="compname"
                   name="companyName"
-                  placeholder="full company name"
+                  placeholder="Full company name"
                 />
               </div>
               <div class="form-group col-lg-6">
@@ -67,7 +67,7 @@
                   class="form-control"
                   id="companyAddress"
                   name="company address"
-                  placeholder="company address"
+                  placeholder="Company address"
                 />
               </div>
             </div>
@@ -80,7 +80,7 @@
                   class="form-control"
                   id="postaladdress"
                   name="postalAddress"
-                  placeholder="postal address"
+                  placeholder="Postal address"
                 />
               </div>
 
@@ -96,7 +96,7 @@
 
               <div class="form-group col-lg-3">
                 <label for="date of incorporation" class="form-label"
-                  >date of incorporation</label
+                  >Date of incorporation</label
                 >
                 <input
                   id="DateOfIncorporation"
@@ -114,7 +114,7 @@
                   name="natureOfBusiness"
                   class="form-control"
                   type="text "
-                  placeholder="nature of business"
+                  placeholder="Nature of business"
                 />
               </div>
 
@@ -162,7 +162,7 @@
                   class="form-control"
                   id="website"
                   name="website"
-                  placeholder="website address"
+                  placeholder="Website address"
                 />
               </div>
             </div>
@@ -259,7 +259,7 @@
                 id="bvn"
                 name="bvn"
                 class="form-control"
-                placeholder="bvn"
+                placeholder="BVN"
               />
             </div>
           </div>
@@ -295,7 +295,7 @@
                 name="contactPersonTel"
                 class="form-control"
                 type="tel "
-                placeholder="telephone number"
+                placeholder="Telephone number"
               />
             </div>
 
@@ -306,7 +306,7 @@
                 name="contactPersonEmail"
                 class="form-control"
                 name="contact email"
-                placeholder="email"
+                placeholder="Email"
               />
             </div>
           </div>
@@ -341,7 +341,7 @@
           <div class="row mulstep-btn-cont">
             <div class="btn btn-left btn-prev">Previous</div>
 
-            <div id="submit-btn" class="btn btn-danger btn-right">submit</div>
+            <div id="submit-btn" class="btn btn-danger btn-right">Submit</div>
           </div>
           <!-- below div ends step-2 -->
         </div>
