--- a/createaccount/estate.html
+++ b/createaccount/estate.html
@@ -20,7 +20,7 @@
       <a href="../index.html">
         <img class="mainlogo" src="../images/logo.png" alt="smatrade logo" />
       </a>
-      <h1>create a Estate account</h1>
+      <h1>Create a Estate account</h1>
     </header>
 
     <div class="container form-wrapper">
@@ -132,7 +132,7 @@
                   name="citizenship"
                   id="citizenship"
                   class="form-control"
-                  placeholder="citizenship"
+                  placeholder="Citizenship"
                 />
               </div>
               <div class="col-lg-6">
@@ -156,7 +156,7 @@
                 name="address"
                 id="address"
                 class="form-control"
-                placeholder="address"
+                placeholder="Address"
               />
             </div>
           </div>
@@ -224,7 +224,7 @@
                 name="phoneNumber"
                 class="form-control"
                 type="tel"
-                placeholder="phone number"
+                placeholder="Phone number"
               />
             </div>
             <div class="form-group col-lg-6">
@@ -233,7 +233,7 @@
                 name="BVN"
                 class="form-control"
                 type="text"
-                placeholder="bvn"
+                placeholder="BVN"
               />
             </div>
           </div>
@@ -245,7 +245,7 @@
                 name="dataOfAccountCreation"
                 class="form-control"
                 type="text"
-                placeholder="date of account creation"
+                placeholder="Date of account creation"
               />
             </div>
             <div class="form-group col-lg-6">
@@ -269,7 +269,7 @@
         <div class="step step-3">
           <h1>Bio data</h1>
           <p>
-            please download the form below and email a filled copy to
+            Please download the form below and email a filled copy to
 
             <a href="mailto:smatradeng@gmail.com"
               ><span class="button">smatradeng@gmail.com</span></a
