--- a/createaccount/minor.html
+++ b/createaccount/minor.html
@@ -20,7 +20,7 @@
       <a href="../index.html">
         <img class="mainlogo" src="../images/logo.png" alt="smatrade logo" />
       </a>
-      <h1>create a Minor account</h1>
+      <h1>Create a Minor account</h1>
     </header>
 
     <div class="container form-wrapper">
@@ -171,7 +171,7 @@
               <!-- this is used to help with the placement of fields -->
 
               <div class="col-lg-3 form-group">
-                <label for="" class="form-label">issue date</label>
+                <label for="" class="form-label">Issue date</label>
                 <input
                   id="id-Date"
                   name="idIssueDate"
@@ -199,7 +199,7 @@
                   class="form-control"
                   type="text"
                   name="residentialAddress"
-                  placeholder="residential address"
+                  placeholder="Residential address"
                 />
               </div>
             </div>
@@ -231,7 +231,7 @@
                   <input
                     id="mobile-tel"
                     name="mobileTel"
-                    placeholder="mobile number "
+                    placeholder="Mobile number "
                     type="tel"
                     class="form-control"
                   />
@@ -256,7 +256,7 @@
                   name="email"
                   class="form-control"
                   type="email"
-                  placeholder="email"
+                  placeholder="Email"
                 />
               </div>
               <div class="col-lg-6">
@@ -404,7 +404,7 @@
         <div class="step step-3">
           <h1>Bio data</h1>
           <p>
-            please download the form below and email a filled copy to
+            Please download the form below and email a filled copy to
 
             <a href="mailto:smatradeng@gmail.com"
               ><span class="button">smatradeng@gmail.com</span></a
@@ -423,7 +423,7 @@
           <div class="row mulstep-btn-cont">
             <div class="btn btn-left btn-prev">Previous</div>
 
-            <div id="submit-btn" class="btn btn-danger btn-right">submit</div>
+            <div id="submit-btn" class="btn btn-danger btn-right">Submit</div>
           </div>
           <!-- below div ends step-2 -->
         </div>
