--- a/createaccount/personal.html
+++ b/createaccount/personal.html
@@ -21,7 +21,7 @@
         <img class="mainlogo" src="../images/logo.png" alt="smatrade logo" />
       </a>
 
-      <h1>create a personal account</h1>
+      <h1>Create a personal account</h1>
     </header>
 
     <div class="container form-wrapper">
@@ -58,7 +58,7 @@
                   class="form-control"
                   id="surname"
                   name="surname"
-                  placeholder="surname"
+                  placeholder="Surname"
                 />
               </div>
               <div class="form-group col-lg-6">
@@ -67,7 +67,7 @@
                   class="form-control"
                   id="first-name"
                   name="firstName"
-                  placeholder="first name"
+                  placeholder="First name"
                 />
               </div>
             </div>
@@ -80,7 +80,7 @@
                   class="form-control"
                   id="middlename"
                   name="middlename"
-                  placeholder="middle name"
+                  placeholder="Middle name"
                 />
               </div>
 
@@ -167,7 +167,7 @@
                   class="form-control"
                   id="id-number"
                   name="idNumber"
-                  placeholder="id number"
+                  placeholder="Id number"
                 />
               </div>
             </div>
@@ -178,7 +178,7 @@
 
               <div class="col-lg-3 form-group">
                 <label for="exampleInputPassword1" class="form-label"
-                  >issue date</label
+                  >Issue date</label
                 >
                 <input
                   id="id-Date"
@@ -189,7 +189,7 @@
               </div>
               <div class="col-lg-3 form-group">
                 <label for="exampleInputPassword1" class="form-label"
-                  >expiration date</label
+                  >Expiration date</label
                 >
                 <input
                   id="id-expiry"
@@ -210,7 +210,7 @@
                   name="residentialAddress"
                   class="form-control"
                   type="text"
-                  placeholder="residential address"
+                  placeholder="Residential address"
                 />
               </div>
             </div>
@@ -224,7 +224,7 @@
                   class="form-control"
                   name="phoneNumber"
                   type="tel"
-                  placeholder="phone number"
+                  placeholder="Phone number"
                 />
               </div>
               <div class="form-group col-lg-6">
@@ -233,7 +233,7 @@
                   name="businessNumber"
                   class="form-control"
                   type="tel"
-                  placeholder="business number"
+                  placeholder="Business number"
                 />
               </div>
             </div>
@@ -247,7 +247,7 @@
                   id="occupation"
                   name="occupation"
                   class="form-control"
-                  placeholder="occupation"
+                  placeholder="Occupation"
                 />
               </div>
               <div class="col-lg-2"></div>
@@ -309,7 +309,7 @@
                   name="initialInvestmentAmount"
                   class="form-control"
                   type="number"
-                  placeholder="initial investment amount"
+                  placeholder="Initial investment amount"
                 />
               </div>
             </div>
@@ -353,7 +353,7 @@
                   name="accountName"
                   class="form-control"
                   type="text"
-                  placeholder="account name"
+                  placeholder="Account name"
                 />
               </div>
               <div class="form-group col-lg-6">
@@ -362,7 +362,7 @@
                   name="accountNumber"
                   class="form-control"
                   type="number"
-                  placeholder="account number"
+                  placeholder="Account number"
                 />
               </div>
             </div>
@@ -376,7 +376,7 @@
                   name="accountOpeningDate"
                   class="form-control"
                   type="text"
-                  placeholder="opening date"
+                  placeholder="Opening date"
                 />
               </div>
               <div class="form-group col-lg-6">
@@ -385,7 +385,7 @@
                   name="bvn"
                   class="form-control"
                   type="text"
-                  placeholder="bvn"
+                  placeholder="BVN"
                 />
               </div>
             </div>
