--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./pages/about.html">About us</a>
+                  <a class="nav-link" href="./pages/about.html">About Us</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
@@ -67,7 +67,7 @@
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li>
                       <a class="dropdown-item" href="./pages/services.html"
-                        >what we do</a
+                        >What we do</a
                       >
                     </li>
                     <li>
@@ -83,7 +83,7 @@
                   >
                 </li>
                 <li class="nav-item" id="login">
-                  <a class="nav-link" href="./pages/login.html">login</a>
+                  <a class="nav-link" href="./pages/login.html">Login</a>
                 </li>
               </ul>
             </div>
@@ -95,8 +95,8 @@
       <section class="top-section container-fluid text-light">
         <div class="row">
           <div class="col-lg-6 col-sm-12 pt-2 top-text">
-            <h4>welcome unboard!</h4>
-            <h2>The Smart Brokers Choice Platform</h2>
+            <h4>Welcome on board!</h4>
+            <h2>SMATRADE</h2>
             <p>The Market at your finger tips</p>
             <a href="./pages/signup.html">
               <button type="button" class="btn btn-danger">
