--- a/pages/marketnews.html
+++ b/pages/marketnews.html
@@ -48,7 +48,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./about.html">About us</a>
+                  <a class="nav-link" href="./about.html">About Us</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
@@ -64,12 +64,12 @@
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li>
                       <a class="dropdown-item" href="./services.html"
-                        >what we do</a
+                        >What we do</a
                       >
                     </li>
                     <li>
                       <a class="dropdown-item" href="./resources.html"
-                        >download</a
+                        >Download</a
                       >
                     </li>
                   </ul>
@@ -80,7 +80,7 @@
                   >
                 </li>
                 <li class="nav-item" id="login">
-                  <a class="nav-link" href="./login.html">login</a>
+                  <a class="nav-link" href="./login.html">Login</a>
                 </li>
               </ul>
             </div>
