--- a/pages/resources.html
+++ b/pages/resources.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../plugins/bootstrap.min.css" />
     <link href="../createaccount/accountstyles.css" rel="stylesheet" />
 
-    <title>SMATRADE - download resources</title>
+    <title>SMATRADE - Download resources</title>
   </head>
   <body>
     <header class="resource-header">
