--- a/pages/signup.html
+++ b/pages/signup.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="./pages.css" />
 
-    <title>SMATRADE-market news</title>
+    <title>SMATRADE-Login</title>
   </head>
   <body>
     <div class="container-fluid topmost">
