--- a/createaccount/personal.html
+++ b/createaccount/personal.html
@@ -263,7 +263,7 @@
                   name="motherMaidianName"
                   class="form-control"
                   type="text"
-                  placeholder="Mothers maidian name"
+                  placeholder="Mother's maidian name"
                 />
               </div>
               <div class="form-group col-lg-6">
@@ -402,7 +402,7 @@
             <!-- this is used to help with the placement of fields -->
             <h1>Bio data</h1>
             <p>
-              please download the form below and email a filled copy to
+              Please download the form below and email a filled copy to
 
               <a href="mailto:smatradeng@gmail.com"
                 ><span class="button">smatradeng@gmail.com</span></a
