--- a/pages/about.html
+++ b/pages/about.html
@@ -48,7 +48,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="active nav-link" href="./about.html">About us</a>
+                  <a class="active nav-link" href="./about.html">About Us</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
@@ -64,7 +64,7 @@
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li>
                       <a class="dropdown-item" href="./services.html"
-                        >what we do</a
+                        >What we do</a
                       >
                     </li>
                     <li>
@@ -78,7 +78,7 @@
                   <a class="nav-link" href="./marketnews.html">Market News</a>
                 </li>
                 <li class="nav-item" id="login">
-                  <a class="nav-link" href="./login.html">login</a>
+                  <a class="nav-link" href="./login.html">Login</a>
                 </li>
               </ul>
             </div>
