--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           <div class="linediv">
             <img src="./images/Line.png" alt="" />
           </div>
-          <h3>Receive Return</h3>
+          <h3>Receive Returns</h3>
           <p>
             You can easily receive your returns on investment with your local
             account number provided by you.
