--- a/pages/services.html
+++ b/pages/services.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="container-fluid topmost">
-      <!-- above div is a wrapper for the top graident covering the navbar and top most section  -->
+      <!-- above div is a wrapper for the top gradient covering the navbar and top most section  -->
 
       <div class="container-fluid">
         <nav class="navbar py-4 navbar-expand-lg navbar-dark">
