--- a/pages/marketnews.html
+++ b/pages/marketnews.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="container-fluid topmost">
-      <!-- above div is a wrapper for the top graident covering the navbar and top most section  -->
+      <!-- above div is a wrapper for the top gradient covering the navbar and top most section  -->
 
       <div class="container-fluid">
         <nav class="navbar py-4 navbar-expand-lg navbar-dark">
@@ -161,7 +161,7 @@
               </button>
             </form>
           </div>
-          <div class="container market-form-imgage-container col-sm-6">
+          <div class="container market-form-image-container col-sm-6">
             <img class="img-fluid" src="../images/man.png" alt="" />
           </div>
         </div>
