working on changes to webpack... fixing errors

--- a/createaccount/corporate.html
+++ b/createaccount/corporate.html
@@ -14,7 +14,7 @@
     <link href="./accountstyles.css" rel="stylesheet" />
 
     <title>SMATRADE - Create a Corperate account</title>
-  </head>
+  <script defer src="corporate.bundle.js"></script></head>
   <body>
     <header>
       <a href="../index.html">
@@ -354,6 +354,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./account.js"></script>
-    <script src="./bundle.js"></script>
+    <script src="./corporate.bundle.js"></script>
   </body>
 </html>
