--- a/createaccount/personal.html
+++ b/createaccount/personal.html
@@ -14,7 +14,7 @@
     <link href="./accountstyles.css" rel="stylesheet" />
 
     <title>SMATRADE - Create a Personal account</title>
-  </head>
+  <script defer src="personal.bundle.js"></script></head>
   <body>
     <header>
       <a href="../index.html">
@@ -443,7 +443,8 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.15.0/firebase.js"></script> -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="./personal.bundle.js"></script>
 
-    <script src="./bundle.js"></script>
+ 
   </body>
 </html>
