fixed most issues, recreating forms from webpack now

--- a/createaccount/corporate.html
+++ b/createaccount/corporate.html
@@ -24,7 +24,7 @@
     </header>
 
     <div class="container form-wrapper">
-      <form id="corporate-account" class="create-info-wrapper">
+      <form id="corporate-account" class="create-info-wrapper corp-form">
         <div class="step step-1 active">
           <!-- <div class="account-toprow form-group mb-4">
             <div class="row">
@@ -341,12 +341,13 @@
           <div class="row mulstep-btn-cont">
             <div class="btn btn-left btn-prev">Previous</div>
 
-            <div id="submit-btn" class="btn btn-danger btn-right">Submit</div>
+            <button type="submit" id="submit-btn" class="btn btn-danger btn-right">Submit</button>
           </div>
           <!-- below div ends step-2 -->
         </div>
       </form>
     </div>
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
@@ -354,6 +355,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="./account.js"></script>
-    <script src="./corporate.bundle.js"></script>
+    <script src="./corporate.bundle.js"></script>  
+
+
   </body>
 </html>
