market emailList done

--- a/createaccount/estate.html
+++ b/createaccount/estate.html
@@ -288,7 +288,13 @@
           <div class="row mulstep-btn-cont">
             <div class="btn btn-left btn-prev">Previous</div>
 
-            <div id="submit-btn" class="btn btn-danger btn-right">submit</div>
+            <button
+            class="btn btn-danger btn-right btn-submit sub-btn"
+            id="submit-btn"
+            type="submit"
+          >
+            Submit
+          </button>
           </div>
           <!-- below div ends step-2 -->
         </div>
