--- a/pages/marketnews.html
+++ b/pages/marketnews.html
@@ -250,7 +250,8 @@
     ></script>
     <script src="../main.js"></script>
     <script src="../functionality.js"></script>
-    <script src="../createaccount/bundle.js"></script>
+    <!-- <script src="../createaccount/bundle.js"></script> -->
+    <script src="../createaccount/mailingLIst.bundle.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
   </body>
 </html>
