client database complete

--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
     <script src="./main.js"></script>
     <script src="./stockData.js"></script>
     <script src="./animations.js"></script>
-    <script src="./createaccount/bundle.js"></script>
+  <script src="./createaccount/app.bundle.js"></script>
   </body>
+
 </html>
