--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </div>
 
           <div
-            class="clock-img-container right-col col-lg-6 pt-2 col-sm-12"
+            class="clock-img-container right-col col-lg-6 pt-2 col-sm-12 d-none d-sm-none d-lg-block"
           ></div>
         </div>
       </section>
@@ -118,7 +118,10 @@
       class="section-2 container-fluid py-5 d-flex justify-content-center"
     >
       <div class="live-data row container-fluid">
-        <div class="stock-img-cont meta col-lg-2 col-sm-2 my-2">
+
+
+ 
+        <div class="stock-img-cont meta col-lg-2 col-md-2 col-sm-2 col-1 my-2">
           <div>
             <img class="stock-img" src="./images/metalogo.png" alt="" />
           </div>
@@ -126,7 +129,7 @@
             <span class="meta-price prices">0.0</span>
           </div>
         </div>
-        <div class="stock-img-cont meta col-lg-2 col-sm-2 my-2">
+        <div class="stock-img-cont meta col-sm-2 col-md-2 col-lg-2 col-1 my-2">
           <div>
             <img class="stock-img" src="./images/microsoftlogo.png" alt="" />
           </div>
@@ -134,7 +137,7 @@
             <span class="microsoft-price prices">0.0</span>
           </div>
         </div>
-        <div class="stock-img-cont meta col-lg-2 col-sm-2 my-2">
+        <div class="stock-img-cont meta col-sm-2 col-md-2 col-lg-2 col-1 my-2">
           <div>
             <img class="stock-img" src="./images/googlelogo.png" alt="" />
           </div>
@@ -142,7 +145,7 @@
             <span class="google-price prices">0.0</span>
           </div>
         </div>
-        <div class="stock-img-cont meta col-lg-2 col-sm-2 my-2">
+        <div class="stock-img-cont meta col-sm-2 col-md-2 col-lg-2 col-1 my-2">
           <div>
             <img class="stock-img" src="./images/adidaslogo.png" alt="" />
           </div>
@@ -150,7 +153,7 @@
             <span class="adidas-price prices">0.0</span>
           </div>
         </div>
-        <div class="stock-img-cont meta col-lg-2 col-sm-2 my-2">
+        <div class="stock-img-cont meta col-sm-2 col-md-2 col-lg-2 col-1 my-2">
           <div>
             <img class="stock-img" src="./images/nikelogo.png" alt="" />
           </div>
@@ -158,7 +161,7 @@
             <span class="nike-price prices">0.0</span>
           </div>
         </div>
-        <div class="stock-img-cont meta col-lg-2 col-sm-2 my-2">
+        <div class="stock-img-cont meta col-sm-2 col-md-2 col-lg-2 col-1 my-2">
           <div>
             <img class="stock-img" src="./images/teslalogo.png" alt="" />
           </div>
@@ -167,6 +170,7 @@
           </div>
         </div>
       </div>
+
     </section>
 
     <section class="section-3 container-fluid" id="section-3">
